code25_all/scala/1269170.txt
scala> i
warning: there were deprecation warnings; re-run with -deprecation for details
res28: Integer = 3

scala> i > 3
<console>:6: error: value > is not a member of Integer
       i > 3
         ^

scala> j
res30: Int = 3

scala> j > 3
res31: Boolean = false

